# ncvista

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gen_test.c
.github/workflows/: cmake-single-platform.yml
scripts/: make_coastlines.py  make_overlays.py
src/: app.cpp  coastline.cpp  coastline.hpp  colormap.cpp  colormap.hpp  ncfile.cpp  ncfile.hpp  overlay.cpp  overlay.hpp  projection.hpp  units.cpp  units.hpp
